# Twitterak

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  twitterak.qrc
include/: AnonymousUser.h  Date.h  OrganisationUser.h  PersonalUser.h  User.h  UserKey.h  twitterakbackend.h
qml/: Main.qml
qml/components/: CustomTextField.qml  FlatButton.qml  TextButton.qml  TweetCard.qml
qml/pages/: LoginPage.qml  MainPage.qml  ProfilePage.qml  SignupPage.qml
src/: AnonymousUser.cpp  Date.cpp  OrganisationUser.cpp  PersonalUser.cpp  User.cpp  UserKey.cpp  main.cpp  twitterakbackend.cpp
